updated methods from fourier series

--- a/Scripts/ED/LaplaceSolution.ipynb
+++ b/Scripts/ED/LaplaceSolution.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "ℯ  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,33 +126,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.9448261889341616\n",
-      "3.9464460040401157\n",
-      "3.949320309541593\n",
-      "3.9533823904543213\n",
-      "3.9585371163077694\n",
-      "3.9646636844040826\n",
-      "3.971618499891621\n",
-      "3.979238550626921\n",
-      "3.9873452304921306\n",
-      "3.9957485266036947\n",
-      "4.004251473396305\n",
-      "4.012654769507869\n",
-      "4.0207614493730786\n",
-      "4.028381500108379\n",
-      "4.035336315595917\n",
-      "4.041462883692231\n",
-      "4.046617609545679\n",
-      "4.050679690458407\n",
-      "4.053553995959884\n",
-      "4.055173811065838\n",
       "El valor de la integral es:  2.1972245773334214\n"
      ]
     },
@@ -179,6 +159,15 @@
     "Para la resolución de este problema se utilzo la formula de integración de Gauss Legendre\n",
     "\n",
     "$\\int_{a}^{b} f(x) dx \\approx \\frac{b-a}{2}\\sum_{i=1}^{n} w_{i}f\\left(\\frac{b-a}{2}x_i+\\frac{a+b}{2}\\right)$\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\frac{4}{\\pi}\\sum_{n; impar}^{\\infty} \\frac{1}{n}f\\left(\\sin{n}{w_{0}}{t}\\right)$\n",
+    "Sabiendo que $w_{0} = \\frac{2\\pi}{T}$ "
    ]
   }
  ],
