--- a/Scripts/ED/LaplaceTest.ipynb
+++ b/Scripts/ED/LaplaceTest.ipynb
@@ -348,6 +348,46 @@
     "\n",
     "inverse_laplace(F, x0, y0, h, N)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para resolver el ejemplo matemáticamente, primero debemos aplicar la definición de la transformada de Laplace:\n",
+    "\n",
+    "$$F(s) = \\mathcal{L}{f(t)} = \\int_0^\\infty e^{-st} f(t) dt$$\n",
+    "\n",
+    "En este caso, tenemos $f(t) = \\frac{1}{t}$, por lo que la transformada de Laplace es:\n",
+    "\n",
+    "$$F(s) = \\int_0^\\infty e^{-st} \\frac{1}{t} dt$$\n",
+    "\n",
+    "Esta integral no tiene una solución cerrada, por lo que se debe utilizar algún método numérico para aproximar su valor. En este caso, utilizaremos el método de cuadratura de Gauss.\n",
+    "\n",
+    "Para aplicar el método de cuadratura de Gauss, primero debemos transformar la integral a una forma en la que se pueda aplicar la cuadratura. Para hacer esto, se realiza un cambio de variable:\n",
+    "\n",
+    "$$u = st \\Rightarrow du = s dt$$\n",
+    "\n",
+    "Sustituyendo en la integral, tenemos:\n",
+    "\n",
+    "$$F(s) = \\int_0^\\infty e^{-u} \\frac{1}{s} \\frac{du}{s} = \\frac{1}{s} \\int_0^\\infty e^{-u} u^{-1} du$$\n",
+    "\n",
+    "hora podemos aplicar la cuadratura de Gauss a la integral $\\int_0^\\infty e^{-u} u^{-1} du$. Primero, debemos elegir los nodos y los pesos de la cuadratura. Para $N$ nodos, los nodos $u_i$ y los pesos $w_i$ se definen como:\n",
+    "\n",
+    "$$u_i = \\frac{1}{2}(\\alpha_i + \\beta_i) + \\frac{1}{2}(\\beta_i - \\alpha_i) x_i$$\n",
+    "\n",
+    "$$w_i = \\frac{1}{2}(\\beta_i - \\alpha_i) A_i$$\n",
+    "\n",
+    "donde $\\alpha_i$ y $\\beta_i$ son los límites de integración, $x_i$ y $A_i$ son los nodos y pesos de la cuadratura de Gauss-Legendre con $N$ nodos en el intervalo $[-1,1]$.\n",
+    "\n",
+    "En este caso, los límites de integración son $0$ y $\\infty$, por lo que debemos hacer un cambio de variable para integrar en el intervalo finito $[0,1]$. Para hacer esto, utilizamos el cambio de variable $u = \\frac{t}{1-t}$, por lo que $du = \\frac{1}{(1-t)^2} dt$. Sustituyendo en la integral, tenemos:\n",
+    "\n",
+    "$$\\int_0^\\infty e^{-u} u^{-1} du = \\int_0^1 e^{-\\frac{t}{1-t}} \\left(\\frac{t}{1-t}\\right)^{-1} \\frac{1}{(1-t)^2} dt = \\int_0^1 \\frac{e^{-t}}{t} dt$$\n",
+    "\n",
+    "Por lo tanto, la transformada de Laplace es:\n",
+    "\n",
+    "$$F(s) = \\frac{1}{s} \\int_0^1 \\frac{e^{-t}}{t} dt$$"
+   ]
   }
  ],
  "metadata": {
