updated methods from fourier series

--- a/Scripts/ED/fourier2.ipynb
+++ b/Scripts/ED/fourier2.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Se busca expandir y gráficar la siguiente serie de Fourier \n",
     "\n",
-    "$f(x) = \\left(\\frac{4}{\\pi} \\sum_{n; impar}^{\\infty}\\frac{1}{n}\\sin{n}w_{0}{t} \\right)$\n",
+    "$f(t) = \\left(\\frac{16}{\\pi^2} \\sum_{n; impar}^{\\infty}\\frac{1}{n^2}\\cos{n}w_{0}{t} \\right)$\n",
     "\n",
     "$w_{0} = \\frac{2\\pi}{T}$\n",
     "\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Expansión de la serie de Fourier\n",
+    "$f(t) = \\left(\\frac{16}{\\pi^2} \\sum_{n; impar}^{\\infty}\\frac{1}{n^2}\\cos{n}w_{0}{t} \\right)$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Expansión de la serie de Fourier\n",
-    "def f():\n",
-    "    return\n",
-    "\n",
     "def fourier(t, n):\n",
     "    w0 = 2 * np.pi / 5\n",
     "    suma = 0\n",
@@ -54,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,16 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1c79bd248d0>]"
+       "[<matplotlib.lines.Line2D at 0x18c7fee1c90>]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -94,7 +98,7 @@
     }
    ],
    "source": [
-    "# Graficar la función original y la expansión de Fourier\n",
+    "# Graficar la expansión de Fourier\n",
     "t = np.linspace(0, 10, 500)\n",
     "fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
     "ax.plot(t, fourier(t, n1), lw=1, label=f'Aproximación con n={n1}')\n",
@@ -104,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
